End Day one and first part of day 2